--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
+                        <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">안녕하세요 반갑습니다</p></div>
                     </div>
                 </div>
                 <div class="row">
