--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Agency - AILIKE.ME Theme</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -195,6 +195,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">MILESTONES</h2>
+                    <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <ul class="timeline">
                     <li>
