--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-heading text-uppercase">Never Be Alone</div>
+                <div class="masthead-subheading">누구도 고립되지 않는 세상을 만들어갑니다</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Learn More</a>
             </div>
         </header>
         <!-- Services-->
