--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container">
                 <div class="masthead-heading text-uppercase">Never Be Alone</div>
                 <div class="masthead-subheading">누구도 고립되지 않는 세상을 만들어갑니다</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Learn More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#about">Learn More</a>
             </div>
         </header>
         <!-- Services-->
