--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Culture</h2>
+                    <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -170,7 +171,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
