--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
-                        <div class="col-lg-8 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
-                        <div class="col-lg-8 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
-                        <div class="col-lg-8 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">안녕하세요 반갑습니다</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> </p></div>
                 </div>
             </div>
         </section>
