--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Harhim Park</h4>
                             <p class="text-muted">CEO</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
                         <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
