--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Harhim Park</h4>
-                            <p class="text-muted">CEO</p>
+                            <a class="text-muted">CEO</a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
