--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
                         <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
                         <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
                     </div>
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                            <h4>Harhim Park</h4>
+                            <p class="text-muted">CEO</p>
+                        </div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> </p></div>
