--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
                             <a class="text-muted">CEO</a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
