--- a/index.html
+++ b/index.html
@@ -95,11 +95,9 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                Next
                                 <br />
-                                Of Our
-                                <br />
-                                Story!
+                                Step?
                             </h4>
                         </div>
                     </li>
