--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
+                                Our
+                                <br />
                                 Next
                                 <br />
-                                <br />
-                                Step?
+                                Story?
                             </h4>
                         </div>
                     </li>
