--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#milestones">Milestones</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#culture">Culture</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#core values">Core Values</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#join us">Join Us</a></li>
                     </ul>
@@ -149,11 +149,11 @@
                 </div>
             </div>
         </section>
-        <!-- Culture-->
-        <section class="page-section" id="culture">
+        <!-- Core Values-->
+        <section class="page-section" id="core values">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Culture</h2>
+                    <h2 class="section-heading text-uppercase">Core Values</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row text-center">
