--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
                             <h4>Harhim Park</h4>
                             <p class="text-muted">CEO</p>
                         </div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
@@ -141,9 +139,7 @@
                             <h4>Harhim Park</h4>
                             <p class="text-muted">CEO</p>
                         </div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고</p></div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 물리학과 학사</p></div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울대 심리학과 석사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
                     </div>
                 </div>
                 <div class="row">
