--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <h4>Harhim Park</h4>
                             <a class="text-primary">CEO</a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                            <p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p>
+                            <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
                     </div>
