--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <p class="text-black">Harhim Park, CEO</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Harhim Park</h4>
                             <p class="text-muted">CEO</p>
                         </div>
@@ -134,7 +134,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Harhim Park</h4>
                             <p class="text-muted">CEO</p>
                         </div>
