--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Focus on Fundamental</h4>
-                        <div class="text-left"><p class="text-muted">본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p></div>
+                        <p class="text-left">본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p>
                     </div>
                 </div>
             </div>
