--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h2 class="section-heading text-uppercase">About</h2>
                 </div>
                 <div class="text-left">
-                    <h3 class="section-subheading text-muted">AILIKE.ME는 현재 서울과학고, 서울대, 의사(정신과 의사 포함) 출신들을 주축으로 한 5명의 최고의 팀원들로 구성되어 있습니다. 법인 설립 후 두 달 만에 10억원이라는 이례적인 액수의 시드 투자를 유치했고 현재도 빠르고 효율적인 의사소통을 바탕으로 성장해 나가고 있습니다.</h3>
+                    <h3 class="section-subheading text-muted">AILIKE.ME는 현재 서울과학고, 서울대 출신들을 주축으로 한 최고의 팀원들로 구성되어 있습니다. 법인 설립 후 두 달 만에 10억원이라는 이례적인 액수의 시드 투자를 유치했고 현재도 빠르고 효율적인 의사소통을 바탕으로 성장해 나가고 있습니다.</h3>
                 </div>
             </div>
         </section>
