--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Harhim Park</h4>
-                            <p class="text-muted">CEO</p>
+                            <p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p>
                         </div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Harhim Park</h4>
-                            <p class="text-muted">CEO</p>
+                            <p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p>
                         </div>
-                        <div class="col-lg-4 mx-auto text-left"><p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p></div>
+                        <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
                 </div>
                 <div class="row">
