--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-fire fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Self-Motivation</h4>
                         <p class="text-muted">자신과 회사의 성장을 위해서 스스로 의미 있다고 생각하는 문제를 정의하고 해결하기 위해 가능한 모든 방법을 동원해서 최선을 다하는 내적 동기를 가진 분을 찾고 있습니다.</p>
