--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/1.png" alt="..." />
                             <h4>Harhim Park</h4>
                             <p class="text-muted">CEO</p>
-                            <p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p>
+                            <p class="large text-muted">서울과학고<br />서울대 물리학 학사<br />서울대 심리학 석사</p>
                             <p class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></p>
                         </div>
                         <div class="col-lg-4 my-0 mx-auto text-left"></div>
@@ -129,16 +129,16 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
-                            <h4>Harhim Park</h4>
-                            <p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p>
+                            <h4>Shin Cho</h4>
+                            <p class="large text-muted">서울과학고<br />서울대 생명과학 학사</p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
-                            <h4>Harhim Park</h4>
-                            <p class="large text-muted">서울과학고<br />서울대 물리학과 학사<br />서울대 심리학과 석사</p>
+                            <h4>Who's Next?</h4>
+                            <p class="large text-muted"></p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
