--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-flash fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Fast Execution</h4>
                         <p class="text-muted">오래 고민해서 완벽한 답을 찾아내려고 하는 것 보다 밀도 있게 고민한 후 자신의 가설을 빠른 실행과 시행착오를 통해 검증하고 방향성을 결정하는 분과 함께하고 싶습니다.</p>
@@ -216,7 +216,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-tree fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Natural Failure</h4>
                         <p class="text-muted">성장을 위해 경계를 넓혀가는 과정은 당연히 실패를 동반한다는 것을 알기 때문에 이를 전혀 개의치 않고 그 실패를 통해서 결국에는 성장할 수 있다는 믿음을 가진 분과 함께하고 싶습니다.</p>
