--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><br /><span class="fa-stack fa-2x"><i class="fas fa-users fa-stack-2x fa-inverse"></i></span></div>
+                        <div class="timeline-image"><br /><br /><span class="fa-stack fa-2x"><i class="fas fa-users fa-stack-2x fa-inverse"></i></span></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
