--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><span class="fa-stack fa-2x"><i class="fas fa-gavel fa-stack-2x fa-inverse"></i></span></div>
+                        <div class="timeline-image"><br /><br /><span class="fa-stack fa-2x"><i class="fas fa-gavel fa-stack-2x fa-inverse"></i></span></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
@@ -85,7 +85,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><span class="fa-stack fa-2x"><i class="fas fa-handshake fa-stack-2x fa-inverse"></i></span></div>
+                        <div class="timeline-image"><br /><br /><span class="fa-stack fa-2x"><i class="fas fa-handshake fa-stack-2x fa-inverse"></i></span></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
