--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <i class="fas fa-gear fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Focus on Fundamental</h4>
-                        <p class="text-left">본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p>
+                        <p class="text-muted">본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p>
                     </div>
                 </div>
             </div>
@@ -256,6 +256,10 @@
                 </div>
                 <div class="text-left">
                     <h3 class="section-subheading text-muted"><b>위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.</b><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
+                </div>
+                <div class="multi">
+                    <p class="text_muted"><b>Requirements</b><br />- AILIKE.ME의 비전에 공감하시는 분</p>
+                    <p class="text_muted"><b>Preferences</b><br />- AILIKE.ME의 비전에 공감하시는 분</p>
                 </div>
                 <div class="text-center">
                     <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
