--- a/index.html
+++ b/index.html
@@ -283,6 +283,17 @@
                     <li>MLOps 하실 수 있는 분</li>
                 </ul>
                 <h4 class="my-3">근무 환경</h4>
+                <div class="text-left">
+                    <h3 class="section-subheading text-muted"><b>AILIKE.ME의 팀원에게는 최대한의 자율성을 보장합니다. 업무의 효율성을 높일 수 있다면 모든 것이 가능합니다.</b><br />팀원으로 합류하신 이후에 건의와 팀 논의를 거쳐서 새로운 팀문화를 함께 만들어 나가는 것도 좋습니다.</h3>
+                </div>
+                <ul>
+                    <li>AILIKE.ME의 비전에 공감하시는 분</li>
+                    <li>최대한 자율적인 환경에서 일하고 싶은 분</li>
+                    <li>초기 스타트업 멤버로서 고속성장에 대한 열망을 가지고 계신 분</li>
+                    <li>불확실성을 오히려 가능성으로 보시는 분</li>
+                    <li>세상에 임팩트를 더하고 싶은 분</li>
+                </ul>
+
                 <div class="text-center">
                     <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
                 </div>
