--- a/index.html
+++ b/index.html
@@ -289,12 +289,15 @@
                 </div>
                 <h4 class="my-3">근무 환경</h4>
                 <ul>
-                    <li>AILIKE.ME의 비전에 공감하시는 분</li>
-                    <li>최대한 자율적인 환경에서 일하고 싶은 분</li>
-                    <li>초기 스타트업 멤버로서 고속성장에 대한 열망을 가지고 계신 분</li>
-                    <li>불확실성을 오히려 가능성으로 보시는 분</li>
-                    <li>세상에 임팩트를 더하고 싶은 분</li>
+                    <li>근무 시간보다 output이 중요</li>
+                    <li>재택근무, 대면근무, 혼합근무 등 모든 근무 형태 가능</li>
+                    <li>횟수, 기간 제한 없는 자율적인 휴가</li>
+                    <li>어디서도 찾아보기 힘든 최고의 팀원들</li>
+                    <li>역량과 성과에 따른 연봉과 스톡옵션</li>
+                    <li>업무 관련 비용, 근무 중 식사비 100% 지원</li>
                 </ul>
+                <br />
+                <h4 class="my-3">채용 과정</h4>
 
                 <div class="text-center">
                     <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
