--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; AILIKE.ME</div>
+                    <div class="col-lg-4 text-lg-start">주식회사 에이아이라이크미<br />사업자 등록번호 877-81-03352<br />hrpark@ailike.me<br />Copyright &copy; AILIKE.ME</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/ailikeme" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
