--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <h4>Shin Cho</h4>
                             <p>.</p>
                             <p class="large">서울과학고<br />서울대 생명과학 학사<br />.</p>
-                            <p class="btn btn-dark btn-social mx-2" href="#!" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></p>
+                            <p class="btn btn-dark btn-social mx-2" href="#!" aria-label="Shin Cho LinkedIn Profile"><i class="fab fa-linkedin-in"></i></p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
