--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <h4>Harhim Park</h4>
                             <p>CEO</p>
                             <p class="large">서울과학고<br />서울대 물리학 학사<br />서울대 심리학 석사</p>
-                            <p class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                         <div class="col-lg-4 my-0 mx-auto text-left"></div>
                     </div>
@@ -298,6 +298,7 @@
                     <li>역량과 성과에 따른 연봉과 스톡옵션</li>
                     <li>업무 관련 비용, 근무 중 식사비 100% 지원</li>
                 </ul>
+                <br />
                 <h4 class="my-3">채용 과정</h4>
                 <p>AILIKE.ME의 채용 과정은 <b>이력서 지원 - 전화 면접 - 대면 면접 - 최종 합격</b>으로 이루어집니다.<br /><b>최종 합격 이후 2달의 수습기간을 거쳐 fit을 맞춰보고 팀 내부 논의를 통해 팀원으로 합류하게 됩니다.</b><br /><b>지원을 원하시는 분은 아래 버튼을 눌러서 hrpark@ailike.me로 이력서와 지원 동기를 포함한 자유형식의 자기소개를 보내주시면 검토 후 연락 드리겠습니다.</b><br />지원에 대한 확신이 서지 않고 더 자세한 이야기를 들어봐야 결정 할 수 있겠다는 생각이 드시는 분도 이메일이나 010-2276-9752로 연락주시면 간단한 콜챗이나 커피챗이 가능하니 편하게 연락주세요.</p>
 
