--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Shin Cho</h4>
-                            <p>.</p>
-                            <p class="large">서울과학고<br />서울대 생명과학 학사<br />.</p>
+                            <p>Executer</p>
+                            <p class="large">서울과학고<br />서울대 생명과학 학사<br /></p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
