--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">GroMind</div>
-                                <div class="portfolio-caption-subheading">Work in Progress</div>
+                                <div class="portfolio-caption-subheading">언제든지 부담없이 고민상담</div>
                             </div>
                         </div>
                     </div>
