--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="https://chat.ailike.me/">
+                            <a class="portfolio-link" href="https://about.ailike.me/">
                                 <div class="portfolio-hover">
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/2.png" alt="..." />
