--- a/index.html
+++ b/index.html
@@ -167,8 +167,19 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">GroMind</div>
-                                <div class="portfolio-caption-subheading">언제든지 부담없이 고민상담</div>
+                                <div class="portfolio-caption-heading">GroMind: AI 고민상담 & 명상</div>
+                                <div class="portfolio-caption-subheading">언제든지 만나는 나만의 숲속 고민 상담소</div>
+                            </div>
+                        </div>
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" href="https://check-your-chat-level.ailike.me/">
+                                <div class="portfolio-hover">
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/3.png" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">BattleChat</div>
+                                <div class="portfolio-caption-subheading">대화가 유일한 기준이 되는 곳</div>
                             </div>
                         </div>
                     </div>
